tests/inputs/errors/E002_3.bib


@book{doe2020book,
    author = {J. Doe},
    title = {{An example entry for a book}},
    year = {2020}
}